# Appcore

./: CMakeLists.txt  LICENSE
Assets/: Mainwindow.xml  Style.xml
Source/: Appmain.cpp  Stdinclude.hpp
Source/Utilities/: Logging.hpp
